src/test/run-pass/issue-1895.rs
fn main() {
  let x = 1;
  let y = fn@[move x]() -> int {
             x
          }();
}

